<resources>
    <string name="app_name">CleanSort</string>
    <string name="Splash">SplashScreen</string>
    <string name="Logo">Logo</string>
    <string name="LogoWhite">Logo Putih</string>
    <string name="kotak">bg kotak</string>
    <string name="Banner">Banner</string>
    <string name="Back">Back</string>
    <string name="btncam">btn camera</string>
    <string name="btnorg">btn organic</string>
    <string name="btnrcyl">btn recyclable</string>
    <string name="imgAbout">btn About Us</string>
    <string name="imgContact">btn Contact Us</string>
    <string name="imgPrivacy">btn Privacy Policy</string>
    <string name="imgTerm">btn Term of Service</string>
    <string name="Box">Box</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="BtnLogin">LOGIN</string>
    <string name="TxtLogin">Login</string>
    <string name="BtnRegister">REGISTER</string>
    <string name="TxtRegister">Register</string>
    <string name="Username">Username</string>
    <string name="InpUser">Enter your username</string>
    <string name="Password">Password</string>
    <string name="InpPass">Enter your password</string>
    <string name="Name">Nama</string>
    <string name="InpName">Enter your name</string>
    <string name="ForgotPass">Forgot password?</string>
    <string name="NoAccount">Dont have an account?</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="BtnMulai">MULAI</string>
    <string name="Detection">Detection</string>
    <string name="PanduanPemindaian">Panduan Pemindaian :</string>
    <string name="DescPanduan">1. Pastikan bahwa sampah yang akan dipindai berada di area pemindaian yang ditentukan.\n2. Pastikan kondisi pencahayaan yang cukup untuk mendapatkan hasil pemindaian yang akurat.\n3. Posisikan kamera ponsel atau perangkat yang digunakan dengan baik agar dapat menangkap gambar sampah dengan jelas.\n4. Setelah memastikan persiapan di atas, ketuk tombol "Mulai Pemindaian" untuk memulai proses pemindaian.\n5. Biarkan aplikasi CleanSort melakukan pemrosesan gambar dan analisis untuk mengidentifikasi jenis sampah.\n6. Tunggu beberapa detik hingga hasil pemindaian muncul.\n7. Setelah mendapatkan hasil pemindaian, Anda dapat melihat informasi lebih lanjut tentang jenis sampah</string>
    <string name="Organic">Organic</string>
    <string name="OrganicTrash">Organic Trash :</string>
    <string name="DescOgnc">Sampah organik mengacu pada bahan limbah yang berasal dari organisme hidup atau sumber alami, terutama terdiri dari zat yang dapat terurai secara hayati. Sampah organik biasanya berupa sisa makanan, sisa tanaman, sisa pekarangan, dan bahan serupa lainnya yang mampu terurai secara alami seiring waktu.\n\nSampah organik terdiri dari senyawa organik, seperti karbohidrat, protein, lemak, dan selulosa, yang berasal dari organisme hidup atau produk sampingannya. Bahan-bahan tersebut umumnya mudah rusak dan dapat terurai melalui proses alami, seperti penguraian oleh mikroorganisme dan bakteri.\n\nPengelolaan sampah organik yang tepat sangat penting untuk pembuangan limbah yang efektif dan kelestarian lingkungan. Dalam banyak sistem pengelolaan sampah, sampah organik dipisahkan dan dikumpulkan secara terpisah dari jenis sampah lainnya, seperti sampah yang dapat didaur ulang atau bahan yang tidak dapat terurai secara hayati. Pemisahan ini memungkinkan penggunaan metode pengolahan khusus, seperti pengomposan atau pencernaan anaerobik, memfasilitasi penguraian dan daur ulang sampah organik menjadi sumber daya yang berharga, seperti kompos atau biogas yang kaya nutrisi.\n\nDengan mengalihkan sampah organik dari TPA dan menerapkan praktik pengelolaan sampah organik yang tepat, individu, komunitas, dan organisasi dapat berkontribusi untuk mengurangi emisi gas rumah kaca, meningkatkan kesuburan tanah, dan melestarikan sumber daya alam.\n\nSecara keseluruhan, sampah organik merupakan bagian yang signifikan dari aliran limbah, dan penanganan serta pembuangannya yang tepat memainkan peran penting dalam mempromosikan praktik pengelolaan limbah yang berkelanjutan dan meminimalkan dampak lingkungan dari timbulan limbah.</string>
    <string name="Recyclable">Recyclable</string>
    <string name="RecyclableTrash">Recyclable Trash :</string>
    <string name="DescRcbl">Sampah yang dapat didaur ulang mengacu pada bahan limbah yang dapat diolah dan diubah menjadi produk atau bahan baru melalui proses daur ulang. Barang-barang tersebut biasanya terbuat dari bahan yang memiliki kemampuan untuk diproses ulang, seperti kertas, plastik, kaca, logam, dan jenis elektronik tertentu.\n\nSampah yang dapat didaur ulang dicirikan oleh potensinya untuk digunakan kembali dan diubah menjadi bahan mentah untuk produksi barang baru. Daur ulang melibatkan pengumpulan, penyortiran, dan pemrosesan bahan-bahan ini untuk memulihkan sumber daya berharga, menghemat energi, dan mengurangi kebutuhan untuk mengekstraksi dan membuat bahan baru dari sumber perawan.\n\nContoh umum sampah yang dapat didaur ulang meliputi:\n1. Kertas dan Karton: Koran, majalah, kardus, kertas kantor, dan produk berbasis kertas lainnya dapat didaur ulang menjadi produk kertas baru.\n2. Plastik: Botol, wadah, bahan pengemas, dan jenis produk plastik tertentu dapat didaur ulang menjadi barang plastik baru atau digunakan sebagai bahan baku industri lain.\n3. Kaca: Botol kaca, toples, dan wadah kaca lainnya dapat didaur ulang dan dilebur untuk menghasilkan produk kaca baru.\n4. Logam: Kaleng aluminium, kaleng baja, kaleng, dan benda logam lainnya dapat didaur ulang dan diolah menjadi produk logam baru.\n5. Elektronik: Perangkat elektronik, seperti komputer, telepon pintar, dan peralatan rumah tangga, seringkali mengandung bahan berharga yang dapat didaur ulang, sehingga mengurangi limbah elektronik.\n\nMendaur ulang sampah yang dapat didaur ulang tidak hanya menghemat sumber daya alam tetapi juga membantu mengurangi limbah TPA, konsumsi energi, dan polusi yang terkait dengan produksi bahan baru. Dengan memisahkan sampah yang dapat didaur ulang dari aliran limbah lainnya dan membuangnya dengan benar di tempat sampah daur ulang atau pusat pengumpulan, individu, komunitas, dan bisnis dapat berkontribusi pada ekonomi sirkular yang lebih berkelanjutan.\nPenting untuk dicatat bahwa daur ulang bahan tertentu dapat bervariasi tergantung pada infrastruktur dan pedoman daur ulang setempat. Sebaiknya konsultasikan dengan otoritas daur ulang setempat atau penyedia pengelolaan limbah untuk informasi spesifik tentang apa yang dapat didaur ulang di wilayah Anda.</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="take_pict">Capture</string>
    <string name="BtnSetting">Setting</string>
    <string name="Setting">Setting</string>
    <string name="AboutUs">About Us</string>
    <string name="ContactUs">Contact Us</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="TermsofService">Terms of Service</string>
    <string name="ColAboutUs">About Us</string>
    <string name="ColContactUs">Contact Us</string>
    <string name="ColPrivacyPolicy">Privacy Policy</string>
    <string name="ColTermsofService">Terms of Service</string>
    <string name="TxtAboutUs"><b>Welcome to CleanSort</b>\n\nAt CleanSort, we are passionate about creating innovative solutions to tackle waste management challenges. We have developed an intelligent application that revolutionizes the way waste is sorted, making it easier, more efficient, and environmentally friendly.\n\nOur Mission\nOur mission is simple yet powerful: to drive sustainable waste management practices and promote a cleaner, greener future. We believe that every individual and organization has a responsibility to minimize their impact on the environment, and we are here to provide the tools and technology to make that happen.\n\nThe CleanSort Application\nOur flagship product, the CleanSort Application, is a cutting-edge solution designed to simplify waste sorting for households, businesses, and communities. With advanced machine learning algorithms and image recognition technology, the CleanSort Application can accurately identify and classify different types of waste in real-time.\nUsing the CleanSort Application is incredibly intuitive. Simply take a photo of the item you wish to dispose of, and the app will instantly identify the material and provide guidance on the appropriate disposal method. Whether it is recycling, composting, or landfill, the CleanSort Application ensures that waste ends up in the right place, reducing contamination and maximizing recycling rates.\n\nWhy Choose CleanSort?\nThere are several reasons why CleanSort stands out as the premier waste management solution:\n1. Environmental Impact: By using CleanSort, you actively contribute to reducing waste contamination and promoting recycling, ultimately preserving our precious natural resources.\n2. Convenience: Sorting waste can be confusing and time-consuming. CleanSort simplifies the process, making waste management effortless and hassle-free.\n3. Efficiency: Our advanced technology ensures accurate waste classification, minimizing errors and optimizing waste management systems.\n4. Data Insights: CleanSort provides valuable data and analytics on waste generation and disposal patterns, empowering organizations and municipalities to make informed decisions for effective waste management strategies.\n\nOur Commitment\nAt CleanSort, we are committed to continuous improvement and staying at the forefront of waste management innovation. We collaborate with environmental organizations, local communities, and industry experts to ensure that our solutions align with the latest sustainability practices.\nJoin us in our journey towards a cleaner, greener world. Together, we can make a significant impact and create a sustainable future for generations to come.\nContact us today to learn more about CleanSort and how you can become part of the waste management revolution.</string>
</resources>