<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/logo"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_column"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:background="@drawable/box"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login">

        <TextView
            android:id="@+id/tvUserL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_txtL"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/column"
            android:hint="@string/InpUser"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserL"/>

        <TextView
            android:id="@+id/tvPassL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_txtL"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_txtL"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/column"
            android:hint="@string/InpPass"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            app:layout_constraintTop_toBottomOf="@id/tvPassL"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginTop="30dp"
        android:text="@string/BtnLogin"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_column"/>

    <LinearLayout
        android:id="@+id/txtLayoutL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:id="@+id/txtNoAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoAccount"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/txtRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxtRegister"
            android:textColor="@color/green02"
            android:textSize="16sp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>