<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradasi"
    tools:context=".ui.HomeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/BtnSetting"
        android:textSize="0sp"
        android:background="@drawable/baseline_settings_24"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logoWhite"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:src="@drawable/logowhite"
        android:contentDescription="@string/LogoWhite"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoWhite">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:contentDescription="@string/Banner"
            android:src="@drawable/banner"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_organic"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:background="@drawable/btn_organic"
            android:layout_marginTop="60dp"
            android:layout_marginStart="55dp"
            style="@style/TextAppearance.AppCompat.Button"
            android:text="@string/btnorg"
            android:textSize="0sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_recyclable"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:background="@drawable/btn_recyclable"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="55dp"
            style="@style/TextAppearance.AppCompat.Button"
            android:text="@string/btnrcyl"
            android:textSize="0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cam"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_cam"
            android:text="@string/btncam"
            android:textSize="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>